<resources>
    <string name="app_name">IoT Controller</string>

    <!-- 內容 -->
    <string name="main_operation">
        IoT とは、従来インターネットに接続されていなかった様々なモノ（センサー機器、駆動装置（アクチュエーター）、住宅・建物、車、家電製品、電子機器など）が、ネットワークを通じてサーバーやクラウドサービスに接続され、
        相互に情報交換をする仕組みです。読み方は「アイオーティー」で、「Internet of Things」の略からもわかるように「モノのインターネット」という意味で使われています。</string>
    <string name="bt_operation">
        ユーザーはこの機能を通じて Bluetooth SPP プロトコルを制御できます。</string>

    <string name="bt_search_dialog_start">
        このBluetoothデバイス</string>
    <string name="bt_search_dialog_end">
        に接続しますか?</string>

    <string name="about">
        ユーザーはこのアプリを通じてどのIoT機能を使用するかできます。</string>
    <string name="copyright">Copyright © 2024 Jhih-Yong, Chen</string>
    <string name="leave">このアプリを終了しますか?</string>
    <string name="signout_message">ログアウトしますか?</string>
    <string name="car_control_instruction">
        ユーザーは方向ボタンを使用して車の方向を制御でき、ABXY ボタンを使用して車のモードを変更するコマンドを送信することもできます。</string>
    <string name="wf_operation">
        ユーザーは Wi-Fi を通じて制御できます。</string>

    <string name="user_account_delete">本当にこのアカウントを削除しますか？\nこの操作を取り消せません</string>

    <!-- drawer 相關 -->
    <string name="drawer_open">
        Drawer_opened
    </string>
    <string name="drawer_close">
        Drawer_closed
    </string>

    <!-- 文字與標題 -->
    <!-- Activity title -->
    <string name="iot_menu">IoT メニュー</string>
    <string name="bluetooth">Bluetooth メニュー</string>
    <string name="wifi">Wi-Fi メニュー</string>
    <string name="bluetooth_scan">Bluetooth Search</string>
    <string name="car_control_page">Car Control</string>

    <string name="bluetooth_search">Bluetooth 探す</string>
    <string name="bluetooth_connect">Bluetooth 接続</string>

    <!-- CarActivity menu -->
    <string name="music_title">Music Selection</string>
    <string name="music_control">Music Control</string>
    <string name="cmd_title">CMD List</string>
    <string name="direction_cmd">Setup Direction CMD</string>
    <!-- MainActivity button -->
    <string name="bluetooth_button">Bluetooth</string>
    <string name="wifi_button">Wi-Fi</string>
    <string name="exit">Exit</string>
    <!-- NavigationDrawer  -->
    <string name="homepage">ホームページ</string>
    <string name="operation_title">操作紹介</string>
    <string name="main_operation_title">IoT とは?</string>
    <string name="light_mode">ライトモードに変更する</string>
    <string name="dark_mode">ダークモードに変更する</string>
    <string name="current_url">當前のURL</string>
    <string name="url_setting">URL設定</string>
    <string name="current_video_url">ビデオのURL</string>
    <string name="video_url_setting">ビデオURL設定</string>
    <string name="about_app">アプリ紹介</string>
    <string name="copyright_title">著作権</string>
    <string name="twitter">X (Twitter)</string>
    <string name="github">Github</string>
    <!-- Dialog -->
    <string name="leave_title">終了</string>
    <string name="ok">はい</string>
    <string name="no">いいえ</string>
    <string name="cancel">キャンセル</string>
    <!-- BottomNavigationView  -->
    <string name="home">ホーム</string>
    <string name="nav_bt">ブルートゥース</string>
    <string name="nav_wifi">ワイファイ</string>
    <string name="personal_info">アカウント</string>
    <!-- Login -->
    <string name="login">ログイン</string>
    <string name="freelogin">非会員ログイン</string>
    <string name="forgot_password">パスワードを忘れた?</string>
    <string name="forgot_password_massage">メールアドレスを入力してください。</string>
    <string name="forgot_password_hint">現在のメールアドレス</string>
    <string name="login_failed">ログインに失敗しました。メールアドレスとパスワードを確認してください</string>
    <string name="new_member">新メンバー? 新規登録</string>
    <!-- Signup -->
    <string name="signup">新規登録</string>
    <string name="username">ユーザー ID</string>
    <string name="username_empty">ユーザー ID を空にすることはできません</string>
    <string name="nickname">ニックネーム</string>
    <string name="nickname_empty">ニックネームを空にすることはできません</string>
    <string name="nickname_error">ニックネームが間違っています</string>
    <string name="email">メールアドレス</string>
    <string name="email_empty">メールアドレスを空にすることはできません</string>
    <string name="invalid_email_address">メールアドレスは無効です</string>
    <string name="mail">メール</string>
    <string name="date">作成日</string>
    <string name="password">パスワード</string>
    <string name="password_empty">パスワードを空にすることはできません</string>
    <string name="password_error">パスワードが間違っています</string>
    <string name="signUp_btn">入力内容を確認</string>
    <string name="signUp_success">サインアップが成功しました</string>
    <string name="signUp_failed">入力されたメールアドレスは既に使用されています。</string>
    <string name="isMember">すでにメンバーですか? ログイン</string>
    <!-- Profile -->
    <string name="edit_profile">プロフィール設定</string>
    <string name="edit_account">アカウント設定</string>
    <string name="save_account">アカウント情報を更新</string>
    <string name="save_profile">プロフィール情報を更新</string>
    <string name="logout">ログアウト</string>
    <string name="id_verify">パスワード入力</string>
    <string name="id_verify_massage">パスワードを入力してください。</string>
    <string name="id_verify_hint">現在のパスワード</string>
    <string name="id_verify_ok">OK</string>
    <string name="new_username">新しいユーザー ID</string>
    <string name="new_email">新しいメールアドレス</string>
    <string name="new_password">新しいパスワード</string>
    <string name="delete">アカウントを削除</string>
    <string name="errorEmail_message">メールアドレスが正しくありません</string>
    <string name="errorUsername_message">名前が短すぎます(3文字以上の英数字文字)</string>
    <string name="errorPassword_message">パスワードが短すぎます(8文字以上の英数字文字)</string>
    <string name="data_update_success">データが正常に更新されました</string>
    <string name="data_update_failed">データが更新されませんでした</string>
    <string name="Password_update_message">パスワードが正常に更新されました</string>
    <string name="Password_update_failed">パスワードの更新に失敗しました</string>
    <string name="gender">性別</string>
    <string name="unselect">未選択</string>
    <string name="gender_male">男性</string>
    <string name="gender_female">女性</string>
    <string name="country">国</string>
    <string name="bornYear">生まれた年</string>
    <string name="bornDate">誕生日</string>
    <string name="close_bottomSheet">完了</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>