<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home"
            android:checked="true"
            android:title="@string/homepage" />
        <item
            android:id="@+id/action_operation"
            android:icon="@drawable/ic_help"
            android:title="@string/main_operation_title" />

        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_app" />
        <item
            android:id="@+id/action_copyright"
            android:icon="@drawable/ic_copyright"
            android:title="@string/copyright_title"
            />
    </group>

</menu>