<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginbg"
    tools:context=".LoginActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">
            <TextView
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/loginText"
                android:textSize="28sp"
                android:textAlignment="center"
                android:textStyle="bold" />
            <EditText
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/login_email"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:drawableLeft="@drawable/ic_account_person"
                android:drawablePadding="8dp"/>
            <EditText
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/login_password"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:padding="8dp"
                android:hint="@string/password"
                android:drawableLeft="@drawable/ic_account_lock"
                android:drawablePadding="8dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">
                <TextView
                    style="@style/textColor"
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/forgot_password"
                    android:textSize="14sp" />
                <TextView
                    style="@style/textColor"
                    android:id="@+id/free_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/freelogin"
                    android:textSize="14sp" />
            </LinearLayout>
            <Button
                style="@style/Button_style"
                android:textColor="@color/toolbar_color_light"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/login"
                android:id="@+id/login_button"
                android:textSize="16sp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                app:cornerRadius = "20dp"/>
            <TextView
                android:id="@+id/signUpRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:layout_gravity="center"
                android:text="@string/new_member"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>