<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginbg"
    tools:context=".SignUpActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">
            <TextView
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="26sp"
                android:textAlignment="center"
                android:textStyle="bold" />
            <EditText
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/signup_email"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:textSize="14sp"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="8dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
            <TextView
                android:id="@+id/errorEmailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:layout_below="@id/signup_email"
                android:layout_marginTop="8dp"/>
            <EditText
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/signup_username"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/username"
                android:textSize="14sp"
                android:drawableLeft="@drawable/ic_person_pin"
                android:drawablePadding="8dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
            <TextView
                android:id="@+id/errorUsernameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:layout_below="@id/signup_username"
                android:layout_marginTop="8dp"/>
            <EditText
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/signup_password"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:textSize="14sp"
                android:drawableLeft="@drawable/ic_account_lock"
                android:drawablePadding="8dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
            <TextView
                android:id="@+id/errorPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:layout_below="@id/signup_password"
                android:layout_marginTop="8dp"/>
            <Button
                style="@style/Button_style"
                android:textColor="@color/toolbar_color_light"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/signUp_btn"
                android:id="@+id/signup_button"
                android:textSize="15sp"
                android:layout_marginTop="30dp"
                app:cornerRadius = "20dp"/>
            <TextView
                style="@style/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirectText"
                android:text="@string/isMember"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>