<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:id="@+id/dialogForgot"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/login_box">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ScreenBackgroundColor"
            android:id="@+id/dialogBox">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forgotTitle"
                android:text="@string/forgot_password"
                android:padding="10dp"
                android:textSize="17sp"
                android:background="@drawable/lavender_round"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_lock_reset"
                android:drawablePadding="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/desc"
                android:text="@string/forgot_password_massage"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/forgotTitle"
                app:layout_constraintBottom_toTopOf="@id/emailBox"/>

            <EditText
                android:id="@+id/emailBox"
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/custom_edittext"
                android:maxLines="1"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:hint="@string/forgot_password_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgotTitle"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/Button_style"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="@id/dialogBox"
                app:layout_constraintEnd_toStartOf="@id/btnReset"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailBox" />

            <Button
                android:id="@+id/btnReset"
                style="@style/Button_style"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                android:text="@string/id_verify_ok"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="@id/dialogBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnCancel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>