<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginbg"
    tools:context=".EditProfileActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/login_box">
        <LinearLayout
            style="@style/ScreenBackgroundColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">
            <TextView
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/editEmail"
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/new_email"
                android:padding="8dp"
                tools:ignore="TouchTargetSizeCheck" />
            <TextView
                android:id="@+id/errorEmailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:layout_below="@id/editEmail"
                android:layout_marginTop="8dp"/>
            <EditText
                android:id="@+id/editUsername"
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_person_pin"
                android:drawablePadding="8dp"
                android:hint="@string/new_username"
                android:padding="8dp"
                tools:ignore="TouchTargetSizeCheck" />
            <TextView
                android:id="@+id/errorUsernameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:layout_below="@id/editUsername"
                android:layout_marginTop="8dp"/>
            <EditText
                android:id="@+id/editPassword"
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_account_lock"
                android:drawablePadding="8dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="8dp"
                tools:ignore="TouchTargetSizeCheck" />
            <TextView
                android:id="@+id/errorPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:layout_below="@id/editPassword"
                android:layout_marginTop="8dp"/>
            <Button
                android:id="@+id/saveButton"
                style="@style/Button_style"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/save"
                android:textColor="@color/toolbar_color_light"
                android:textSize="16sp"
                app:cornerRadius="20dp" />
            <Button
                android:id="@+id/cancelButton"
                style="@style/Button_style"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/cancel"
                android:textColor="@color/toolbar_color_light"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />
            <Button
                android:id="@+id/deleteButton"
                android:backgroundTint="#C31919"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="end"
                android:text="@string/delete"
                android:textColor="@color/toolbar_color_light"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>